<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/silverware"
            android:title="@string/my_restaurants" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/qrcode_scan"
            android:title="@string/scan_table" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/share_menu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/invite_a_friend" />
        </menu>
    </item>

</menu>
